--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -14,7 +15,7 @@
   </style>
 </head>
 <body>
-  <section class="container">
+  <main class="container">
     <div class="card">
       <img src="./images/bg-pattern-card.svg" alt="bg-pattern-card">
       <div class="card__content">
@@ -26,20 +27,20 @@
         
         <div class="card__info">
           <div class="card__num">
-            <h4>80K</h4>
+            <span>80K</span>
             <p>Followers</p>
           </div>
           <div class="card__num">
-            <h4>803K</h4>
+            <span>803K</span>
             <p>Likes</p>
           </div>
           <div class="card__num">
-            <h4>1.4K</h4>
+            <span>1.4K</span>
             <p>Photos</p>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </main>
 </body>
 </html>
