--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </style>
 </head>
 <body>
+  <h1>Profile Card Component</h1>
   <main class="container">
     <div class="card">
       <img src="./images/bg-pattern-card.svg" alt="bg-pattern-card">
